--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,6 +1,58 @@
-<h1>Eventos do components</h1>
-
-<div *ngFor="let evento of eventos">
-   <p><b>Tema: </b>{{evento.tema}}</p>
-   <p><b>Local: </b>{{evento.local}}</p>
+<h2>Eventos</h2>
+<hr>
+<div action="" class="row g-2">
+   <div class="col-auto d-flex align-items-center">
+      <label class="mr-2">Filtro:</label>
+      <input 
+         type="text"
+         class="form-control ms-2"
+         placeholder="buscar"
+         [(ngModel)]="filtroLista"
+      >
+   </div>
+</div>
+<h3>Filtro: {{filtroLista}}</h3>
+<div class="mt-3">
+   <table class="table table-striped">
+      <thead class="table-dark">
+         <tr>
+            <th>
+               <button type="button" class="btn btn-outline-light btn-sm" (click)="exibirImagem()">
+                  {{!mostrarImagem ? 'Exibir' : 'Ocultar'}}
+               </button>
+            </th>
+            <th>#</th>
+            <th>Tema</th>
+            <th>Local</th>
+            <th>Data</th>
+            <th>Qtd Pessoas</th>
+            <th>Lote</th>
+            <th>Opções</th>
+         </tr>
+      </thead>
+      <tbody *ngIf="eventos && eventos.length">
+         <tr *ngFor="let evento of eventosFiltrados">
+            <td>
+               <img [collapse]="!mostrarImagem" [isAnimated]="true" src="/assets/{{evento.imagemUrl}}" class="fotosGrid">
+            </td>
+            <td>{{evento.eventoId}}</td>
+            <td>{{evento.tema}}</td>
+            <td>{{evento.local}}</td>
+            <td>{{evento.dataEvento}}</td>
+            <td>{{evento.qtdPessoas}}</td>
+            <td>{{evento.lote}}</td>
+            <td>
+               <button type="button" class="btn btn-primary btn-sm">Editar</button>
+               <button type="button" class="btn btn-danger btn-sm ms-2">Excluir</button>
+            </td>
+         </tr>
+      </tbody>
+      <tfoot *ngIf="!eventos.length">
+         <tr>
+            <td colspan="8" class="text-center">
+               <h4>Nenhum evento encontrado!</h4>
+            </td>
+         </tr>
+      </tfoot>
+   </table>
 </div>
