--- a/Front/ProEventos-App/src/app/app.component.html
+++ b/Front/ProEventos-App/src/app/app.component.html
@@ -1,6 +1,14 @@
 <app-nav></app-nav>
 <div class="container">
-   <app-eventos></app-eventos>
    
    <router-outlet />
 </div>
+
+<ngx-spinner 
+   type="ball-scale-multiple"
+   bdColor="rgba(51, 51, 51, 0.8)"
+   size="medium"
+   color="#fff"
+>
+   <p style="font-size: 20px; color: white;">Carregando...</p>
+</ngx-spinner>
