--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,69 +1,2 @@
-<app-titulo [titulo]="'Evento'"></app-titulo>
-<div action="" class="row g-2">
-   <div class="col-auto d-flex align-items-center">
-      <label class="mr-2">Filtro:</label>
-      <input 
-         type="text"
-         class="form-control ms-2"
-         placeholder="buscar"
-         [(ngModel)]="filtroLista"
-      >
-   </div>
-</div>
-<h3>Filtro: {{filtroLista}}</h3>
-<div class="mt-3">
-   <table class="table table-striped">
-      <thead class="table-dark">
-         <tr>
-            <th>
-               <button type="button" class="btn btn-outline-light btn-sm" (click)="exibirImagem()">
-                  <i class="{{!mostrarImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
-                  {{!mostrarImagem ? 'Exibir' : 'Ocultar'}}
-               </button>
-            </th>
-            <th>#</th>
-            <th>Tema</th>
-            <th>Local</th>
-            <th>Data</th>
-            <th>Qtd Pessoas</th>
-            <th>Lote</th>
-            <th>Opções</th>
-         </tr>
-      </thead>
-      <tbody *ngIf="eventos && eventos.length">
-         <tr *ngFor="let evento of eventosFiltrados">
-            <td>
-               <img [collapse]="!mostrarImagem" [isAnimated]="true" src="/assets/{{evento.imagemUrl}}" class="fotosGrid">
-            </td>
-            <td>{{evento.id}}</td>
-            <td>{{evento.tema}}</td>
-            <td>{{evento.local}}</td>
-            <td>{{evento.dataEvento | DateFormatPipe}}</td>
-            <td>{{evento.qtdPessoas}}</td>
-            <td>{{evento.lotes[0].nome}}</td>
-            <td>
-               <button type="button" class="btn btn-primary btn-sm" tooltip="Editar">
-                  <i class="fa fa-edit"></i>
-               </button>
-               <button type="button" (click)="openModal(template)" class="btn btn-danger btn-sm ms-2" tooltip="Excluir">
-                  <i class="fa fa-trash"></i>
-               </button>
-            </td>
-         </tr>
-      </tbody>
-      <tfoot *ngIf="!eventos.length">
-         <tr>
-            <td colspan="8" class="text-center">
-               <h4>Nenhum evento encontrado!</h4>
-            </td>
-         </tr>
-      </tfoot>
-   </table>
-</div>
-<ng-template #template>
-   <div class="modal-body text-center">
-     <p>Você tem certeza?</p>
-     <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
-     <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
-   </div>
- </ng-template>
+<app-titulo [titulo]="'Eventos'" [iconClass]="'fa fa-calendar-alt'" [botaoListar]="true"></app-titulo>
+<router-outlet />
