--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="form-group col-md-12">
           <label>Tema</label>
-          <input type="text" class="form-control" [ngClass]="{'is-invalid': f.tema.errors && f.tema.touched}" formControlName="tema" placeholder="Insira o Tema">
+          <input type="text" class="form-control" [ngClass]="cssValidator(f.tema)" formControlName="tema" placeholder="Insira o Tema">
           <div class="invalid-feedback" *ngIf="f.tema.errors?.required">Obrigatório</div>
           <div class="invalid-feedback" *ngIf="f.tema.errors?.minlength">Deve ter no mínimo 4 caracteres</div>
           <div class="invalid-feedback" *ngIf="f.tema.errors?.maxlength">Deve ter no máximo 50 caracteres</div>
@@ -13,36 +13,42 @@
       <div class="row">
         <div class="form-group col-md-8 col-12">
           <label>Local</label>
-          <input type="text" class="form-control" [ngClass]="{'is-invalid': f.local.errors && f.local.touched}" formControlName="local" placeholder="Local">
+          <input type="text" class="form-control" [ngClass]="cssValidator(f.local)" formControlName="local" placeholder="Local">
           <div class="invalid-feedback">Obrigatório</div>
         </div>
         <div class="form-group col-md-4 col-12">
           <label>Data e Hora</label>
-          <input type="datetime" class="form-control" [ngClass]="{'is-invalid': f.dataEvento.errors && f.dataEvento.touched}" formControlName="dataEvento" placeholder="Data">
+          <input
+            type="datetime"
+            class="form-control"
+            [ngClass]="cssValidator(f.dataEvento)"
+            formControlName="dataEvento"
+            placeholder="Data"
+            bsDatepicker [bsConfig]="bsConfig">
           <div class="invalid-feedback">Obrigatório</div>
         </div>
       </div>
       <div class="row">
         <div class="form-group col-md-2">
           <label>Qtd Pessoas</label>
-          <input type="text" class="form-control" [ngClass]="{'is-invalid': f.qtdPessoas.errors && f.qtdPessoas.touched}" formControlName="qtdPessoas" placeholder="Quantidade Pessoas">
+          <input type="text" class="form-control" [ngClass]="cssValidator(f.qtdPessoas)" formControlName="qtdPessoas" placeholder="Quantidade Pessoas">
           <div class="invalid-feedback" *ngIf="f.qtdPessoas.errors?.required">Obrigatório</div>
           <div class="invalid-feedback" *ngIf="f.qtdPessoas.errors?.max">Máximo 120.000</div>
         </div>
         <div class="form-group col-md-2">
           <label>Telefone</label>
-          <input type="text" class="form-control" [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched}" formControlName="telefone" placeholder="(000) 90000-0000">
+          <input type="text" class="form-control" [ngClass]="cssValidator(f.telefone)" formControlName="telefone" placeholder="(000) 90000-0000">
           <div class="invalid-feedback">Obrigatório</div>
         </div>
         <div class="form-group col-md-4">
           <label>E-mail</label>
-          <input type="text" class="form-control" [ngClass]="{'is-invalid': f.email.errors && f.email.touched}" formControlName="email" placeholder="e-mail">
+          <input type="text" class="form-control" [ngClass]="cssValidator(f.email)" formControlName="email" placeholder="e-mail">
           <div class="invalid-feedback" *ngIf="f.email.errors?.required">Obrigatório</div>
           <div class="invalid-feedback" *ngIf="f.email.errors?.email">E-mail inválido</div>
         </div>
         <div class="form-group col-md-4">
           <label>Imagem</label>
-          <input type="text" class="form-control" [ngClass]="{'is-invalid': f.imagemUrl.errors && f.imagemUrl.touched}" formControlName="imagemUrl" placeholder="Imagem">
+          <input type="text" class="form-control" [ngClass]="cssValidator(f.imagemUrl)" formControlName="imagemUrl" placeholder="Imagem">
           <div class="invalid-feedback">Obrigatório</div>
         </div>
       </div>
@@ -52,7 +58,7 @@
         <button class="btn btn-outline-secondary me-auto border" (click)="resetForm()">
           Cancelar Alteração
         </button>
-        <button class="btn btn-success" [disabled]="!eventoForm.valid">
+        <button class="btn btn-success" [disabled]="!eventoForm.valid" (click)="salvarAlteracoes()">
           <!-- <span class="spinner-border spinner-border-sm me-1"></span> -->
           Salvar Evento
         </button>
