--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -46,9 +46,9 @@
            <td class="d-none d-md-table-cell">{{evento.local}}</td>
            <td>{{evento.dataEvento | DateFormatPipe}}</td>
            <td class="d-none d-md-table-cell">{{evento.qtdPessoas}}</td>
-           <td class="d-none d-md-table-cell">{{evento.lotes[0].nome}}</td>
+           <td class="d-none d-md-table-cell">{{evento.lotes[0]?.nome}}</td>
            <td>
-              <button type="button" (click)="openModal(template)" class="btn btn-danger btn-lg ms-2" tooltip="Excluir">
+              <button type="button" (click)="openModal($event, template, evento.id)" class="btn btn-danger btn-lg ms-2" tooltip="Excluir">
                  <i class="fa fa-trash"></i>
               </button>
            </td>
@@ -65,7 +65,7 @@
 </div>
 <ng-template #template>
   <div class="modal-body text-center">
-     <p>Você tem certeza?</p>
+     <p>Deletar evento Id: {{eventoId}}?</p>
      <button type="button" class="btn btn-default" (click)="confirm()">Sim</button>
      <button type="button" class="btn btn-primary" (click)="decline()">Não</button>
   </div>
