--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -58,7 +58,7 @@
         <button class="btn btn-outline-secondary me-auto border" (click)="resetForm()">
           Cancelar Alteração
         </button>
-        <button class="btn btn-success" [disabled]="!eventoForm.valid" (click)="salvarAlteracoes()">
+        <button class="btn btn-success" [disabled]="!eventoForm.valid" (click)="salvarEvento()">
           <!-- <span class="spinner-border spinner-border-sm me-1"></span> -->
           Salvar Evento
         </button>
@@ -66,3 +66,84 @@
     </div>
   </form>
 </div>
+<div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">
+  <div class="p-3">
+    <div class="d-flex border-bottom">
+      <h2 class="me-auto">
+        Lotes do Evento
+      </h2>
+      <h2>
+        <i class="fas fa-money-bill-wave"></i>
+      </h2>
+    </div>
+    <p>Clique em Lote para adicionar e preencher novos Lotes</p>
+    <div class="form-row p-1">
+      <div [formGroup]="eventoForm" class="col">
+        <!-- <p>Form value: {{ eventoForm.get('lotes')?.value | json }}</p>
+        <p>Form Status: {{ eventoForm.get('lotes')?.status | json }}</p> -->
+        <div formArrayName="lotes" *ngFor="let lote of lotes.controls; let i=index">
+          <fieldset [formGroupName]="i" class="form-group">
+            <legend class="d-flex justify-content-between capitalize">
+              {{
+                retornaTituloLote(lotes.get(i+'.nome')?.value)
+              }}
+              <button (click)="removerLote(template, i)" class="p-2 btn btn-sm btn-outline-warning my-1 d-flex"
+                tooltip="Excluir Lote"
+                placement="left">
+              <i class="fa fa-window-close my-1"></i>
+              <b class="ml-1 d-none d-sm-block">Excluir</b>
+            </button>
+          </legend>
+          <div class="row">
+            <div class="form-group col-md-4">
+              <label>Nome</label>
+              <input [ngClass]="cssValidator(lotes.get(i + '.nome'))" type="text" class="form-control" formControlName="nome" placeholder="Lote">
+              <div class="invalid-feedback">Obrigatório</div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Quantidade</label>
+              <input [ngClass]="cssValidator(lotes.get(i + '.quantidade'))" type="text" class="form-control" formControlName="quantidade" placeholder="000">
+              <div class="invalid-feedback">Obrigatório</div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Preço</label>
+              <input [currencyMask]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left' }" [ngClass]="cssValidator(lotes.get(i + '.preco'))" type="text" currencyMask class="form-control" formControlName="preco" placeholder="R$ 0,00">
+              <div class="invalid-feedback">Obrigatório</div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Data Início</label>
+              <input type="text" class="form-control" formControlName="dataInicio" placeholder="01/01/2019" bsDatepicker [bsConfig]="bsConfigLote">
+            </div>
+            <div class="form-group col-md-4">
+              <label>Data Fim</label>
+              <input type="text" class="form-control" formControlName="dataFim" placeholder="01/01/2019" bsDatepicker [bsConfig]="bsConfigLote">
+            </div>
+          </div>
+        </fieldset>
+      </div>
+    </div>
+  </div>
+  <button (click)="adicionarLote()" class="d-flex btn btn-outline-primary">
+    <i class="fa fa-plus-circle my-1"></i>
+    <b class="ml-1">Lote</b>
+  </button>
+</div>
+<div class="card-footer">
+  <div class="d-flex">
+    <button class="btn btn-outline-secondary me-auto border">
+      Cancelar Alteração
+    </button>
+    <button (click)="salvarLotes()" [disabled]="eventoForm.get('lotes')?.invalid" class="btn btn-success">
+      Salvar Lotes
+    </button>
+  </div>
+</div>
+</div>
+<br>
+<ng-template #template>
+  <div class="modal-body text-center">
+     <p>Tem certeza que quer deletar o lote {{this.loteAtual.nome}}?</p>
+     <button type="button" class="btn btn-default" (click)="confirmDeleteLote()">Sim</button>
+     <button type="button" class="btn btn-primary" (click)="declineDeleteLote()">Não</button>
+  </div>
+</ng-template>
