--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -1,35 +1,47 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm" *ngIf="showMenu()">
   <div class="container">
-    <a class="navbar-brand" routerLink="dashboard">
+    <a class="navbar-brand" routerLink="home">
       <i class="fa fa-users mb-2"></i>
     </a>
-    <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" [collapse]="isCollapsed" [isAnimated]="true" id="navbarNav">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="eventos/lista" routerLinkActive="active">Eventos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="palestrantes" routerLinkActive="active">Palestrantes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="contatos" routerLinkActive="active">Contatos</a>
-        </li>
+        <ng-container *ngIf="(accountService.currentUser$ | async) !== null">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="dashboard"
+              routerLinkActive="active">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="eventos/lista"
+              routerLinkActive="active">Eventos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="palestrantes" routerLinkActive="active">Palestrantes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="contatos" routerLinkActive="active">Contatos</a>
+          </li>
+        </ng-container>
       </ul>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item dropdown" dropdown>
-          <a dropdownToggle class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Douglas
+      <div *ngIf="(accountService.currentUser$ | async) === null" class="navbar-nav me-3 d-xs-none d-none d-md-block">
+        <a class="btn btn-light me-2 border" routerLink="/user/login">Entrar</a>
+        <a class="btn btn-warning" routerLink="/user/registration">Me Cadastrar</a>
+      </div>
+      <ul *ngIf="(accountService.currentUser$ | async) !== null" class="navbar-nav ms-auto">
+        <li class="nav-item dropdown" dropdown *ngIf="(accountService.currentUser$ | async) as User">
+          <a dropdownToggle class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdownMenuLink"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{User.nome | titlecase}}
           </a>
-          <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" routerLink="user/perfil">
+          <div *dropdownMenu class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" routerLink="/user/perfil">
               Perfil
             </a>
             <div role="separator" class="divider"></div>
-            <a class="dropdown-item" routerLink="user/login">
+            <a (click)="logout()" class="dropdown-item" style="cursor: pointer;">
               Sair
             </a>
           </div>
