--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -1,72 +1,113 @@
 <div class="card rounded shadow-sm p-3">
   <div class="d-flex">
-     <div class="flex-fill pe-3">
-        <div class="input-group mb-2">
-           <div class="input-group-prepend">
-              <div class="input-group-text">Filtro:</div>
-           </div>
-           <input type="text" class="form-control me-2" placeholder="Filtrar por tema e local" [(ngModel)]="filtroLista">
+    <div class="flex-fill pe-3">
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">Filtro:</div>
         </div>
-     </div>
-     <div>
-        <a class="d-flex btn btn-outline-primary" routerLink="/eventos/detalhe">
-           <i class="fa fa-plus-circle my-1"></i>
-           <b class="ms-1 d-none d-sm-block">Inserir</b>
-        </a>
-     </div>
+        <input
+          type="text"
+          class="form-control me-2"
+          placeholder="Filtrar por tema e local"
+          (input)="filtrarEventos($event.target)"
+        />
+      </div>
+    </div>
+    <div>
+      <a class="d-flex btn btn-outline-primary" routerLink="/eventos/detalhe">
+        <i class="fa fa-plus-circle my-1"></i>
+        <b class="ms-1 d-none d-sm-block">Inserir</b>
+      </a>
+    </div>
   </div>
-  <h3>Filtro: {{filtroLista}}</h3>
 
   <table class="table table-striped table-hover">
-     <thead class="table-dark">
-        <tr>
-           <th class="d-none d-md-table-cell">
-              <button type="button" class="btn btn-outline-light btn-sm" (click)="alterarImagem()">
-                 <i class="{{!mostrarImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
-                 {{!mostrarImagem ? 'Exibir' : 'Ocultar'}}
-              </button>
-           </th>
-           <th>#</th>
-           <th>Tema</th>
-           <th class="d-none d-md-table-cell">Local</th>
-           <th>Data</th>
-           <th class="d-none d-md-table-cell">Qtd Pessoas</th>
-           <th class="d-none d-md-table-cell">Lote</th>
-           <th>Opções</th>
-        </tr>
-     </thead>
-     <tbody *ngIf="eventos && eventos.length">
-        <tr *ngFor="let evento of eventosFiltrados" (click)="detalheEvento(evento.id)" style="cursor: pointer;">
-           <td class="d-none d-md-table-cell">
-              <img [collapse]="!mostrarImagem" [isAnimated]="true" [src]="mostraImagem(evento.imagemUrl)"
-                 class="fotosGrid">
-           </td>
-           <td>{{evento.id}}</td>
-           <td>{{evento.tema}}</td>
-           <td class="d-none d-md-table-cell">{{evento.local}}</td>
-           <td>{{evento.dataEvento | DateFormatPipe}}</td>
-           <td class="d-none d-md-table-cell">{{evento.qtdPessoas}}</td>
-           <td class="d-none d-md-table-cell">{{evento.lotes[0]?.nome}}</td>
-           <td>
-              <button type="button" (click)="openModal($event, template, evento.id)" class="btn btn-danger btn-lg ms-2" tooltip="Excluir">
-                 <i class="fa fa-trash"></i>
-              </button>
-           </td>
-        </tr>
-     </tbody>
-     <tfoot *ngIf="!eventos.length">
-        <tr>
-           <td colspan="8" class="text-center">
-              <h4>Nenhum evento encontrado!</h4>
-           </td>
-        </tr>
-     </tfoot>
+    <thead class="table-dark">
+      <tr>
+        <th class="d-none d-md-table-cell">
+          <button
+            type="button"
+            class="btn btn-outline-light btn-sm"
+            (click)="alterarImagem()"
+          >
+            <i
+              class="{{ !mostrarImagem ? 'fa fa-eye' : 'fa fa-eye-slash' }}"
+            ></i>
+            {{ !mostrarImagem ? "Exibir" : "Ocultar" }}
+          </button>
+        </th>
+        <th>#</th>
+        <th>Tema</th>
+        <th class="d-none d-md-table-cell">Local</th>
+        <th>Data</th>
+        <th class="d-none d-md-table-cell">Qtd Pessoas</th>
+        <th class="d-none d-md-table-cell">Lote</th>
+        <th>Opções</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="eventos && eventos.length">
+      <tr
+        *ngFor="let evento of eventos"
+        (click)="detalheEvento(evento.id)"
+        style="cursor: pointer"
+      >
+        <td class="d-none d-md-table-cell">
+          <img
+            [collapse]="!mostrarImagem"
+            [isAnimated]="true"
+            [src]="mostraImagem(evento.imagemUrl)"
+            class="fotosGrid"
+          />
+        </td>
+        <td>{{ evento.id }}</td>
+        <td>{{ evento.tema }}</td>
+        <td class="d-none d-md-table-cell">{{ evento.local }}</td>
+        <td>{{ evento.dataEvento | DateFormatPipe }}</td>
+        <td class="d-none d-md-table-cell">{{ evento.qtdPessoas }}</td>
+        <td class="d-none d-md-table-cell">{{ evento.lotes[0]?.nome }}</td>
+        <td>
+          <button
+            type="button"
+            (click)="openModal($event, template, evento.id)"
+            class="btn btn-danger btn-lg ms-2"
+            tooltip="Excluir"
+          >
+            <i class="fa fa-trash"></i>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot *ngIf="!eventos.length">
+      <tr>
+        <td colspan="8" class="text-center">
+          <h4>Nenhum evento encontrado!</h4>
+        </td>
+      </tr>
+    </tfoot>
   </table>
+  <div class="d-flex justify-content-center">
+    <pagination
+      [boundaryLinks]="true"
+      [totalItems]="pagination.totalItems"
+      [itemsPerPage]="pagination.itemsPerPage"
+      (pageChanged)="pageChanged($event)"
+      pageBtnClass="btn"
+      previousText="&lsaquo;"
+      nextText="&rsaquo;"
+      firstText="&laquo;"
+      lastText="&raquo;"
+    >
+    </pagination>
+  </div>
 </div>
 <ng-template #template>
   <div class="modal-body text-center">
-     <p>Deletar evento Id: {{eventoId}}?</p>
-     <button type="button" class="btn btn-default" (click)="confirm()">Sim</button>
-     <button type="button" class="btn btn-primary" (click)="decline()">Não</button>
+    <p>Deletar evento Id: {{ eventoId }}?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="decline()">
+      Não
+    </button>
   </div>
 </ng-template>
