--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -1,61 +1,123 @@
 <div class="row">
-  <div [ngClass]="{'col-md-8 pe-0': modoEditar, 'col-md-12': !modoEditar}">
+  <div [ngClass]="{ 'col-md-8 pe-0': modoEditar, 'col-md-12': !modoEditar }">
     <div class="card rounded shadow-sm">
       <form [formGroup]="eventoForm">
         <div class="p-3">
           <div class="row">
             <div class="form-group col-md-12">
               <label>Tema</label>
-              <input type="text" class="form-control" [ngClass]="cssValidator(f.tema)" formControlName="tema"
-                placeholder="Insira o Tema" [(ngModel)]="evento.tema">
-              <div class="invalid-feedback" *ngIf="f.tema.errors?.required">Obrigatório</div>
-              <div class="invalid-feedback" *ngIf="f.tema.errors?.minlength">Deve ter no mínimo 4 caracteres</div>
-              <div class="invalid-feedback" *ngIf="f.tema.errors?.maxlength">Deve ter no máximo 50 caracteres</div>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="cssValidator(f.tema)"
+                formControlName="tema"
+                placeholder="Insira o Tema"
+                [(ngModel)]="evento.tema"
+              />
+              <div class="invalid-feedback" *ngIf="f.tema.errors?.required">
+                Obrigatório
+              </div>
+              <div class="invalid-feedback" *ngIf="f.tema.errors?.minlength">
+                Deve ter no mínimo 4 caracteres
+              </div>
+              <div class="invalid-feedback" *ngIf="f.tema.errors?.maxlength">
+                Deve ter no máximo 50 caracteres
+              </div>
             </div>
           </div>
           <div class="row">
             <div class="form-group col-md-8 col-12">
               <label>Local</label>
-              <input type="text" class="form-control" [ngClass]="cssValidator(f.local)" formControlName="local"
-                placeholder="Local" [(ngModel)]="evento.local">
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="cssValidator(f.local)"
+                formControlName="local"
+                placeholder="Local"
+                [(ngModel)]="evento.local"
+              />
               <div class="invalid-feedback">Obrigatório</div>
             </div>
             <div class="form-group col-md-4 col-12">
               <label>Data e Hora</label>
-              <input type="datetime" class="form-control" [ngClass]="cssValidator(f.dataEvento)"
-                formControlName="dataEvento" placeholder="Data" bsDatepicker [bsConfig]="bsConfig" [(ngModel)]="evento.dataEvento">
+              <input
+                type="datetime"
+                class="form-control"
+                [ngClass]="cssValidator(f.dataEvento)"
+                formControlName="dataEvento"
+                placeholder="Data"
+                bsDatepicker
+                [bsConfig]="bsConfig"
+                [(ngModel)]="evento.dataEvento"
+              />
               <div class="invalid-feedback">Obrigatório</div>
             </div>
           </div>
           <div class="row">
             <div class="form-group col-md-2">
               <label>Qtd Pessoas</label>
-              <input type="text" class="form-control" [ngClass]="cssValidator(f.qtdPessoas)"
-                formControlName="qtdPessoas" placeholder="Quantidade Pessoas" [(ngModel)]="evento.qtdPessoas">
-              <div class="invalid-feedback" *ngIf="f.qtdPessoas.errors?.required">Obrigatório</div>
-              <div class="invalid-feedback" *ngIf="f.qtdPessoas.errors?.max">Máximo 120.000</div>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="cssValidator(f.qtdPessoas)"
+                formControlName="qtdPessoas"
+                placeholder="Quantidade Pessoas"
+                [(ngModel)]="evento.qtdPessoas"
+              />
+              <div
+                class="invalid-feedback"
+                *ngIf="f.qtdPessoas.errors?.required"
+              >
+                Obrigatório
+              </div>
+              <div class="invalid-feedback" *ngIf="f.qtdPessoas.errors?.max">
+                Máximo 120.000
+              </div>
             </div>
             <div class="form-group col-md-4">
               <label>Telefone</label>
-              <input type="text" class="form-control" [ngClass]="cssValidator(f.telefone)" formControlName="telefone"
-                placeholder="(000) 90000-0000" [(ngModel)]="evento.telefone">
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="cssValidator(f.telefone)"
+                formControlName="telefone"
+                placeholder="(000) 90000-0000"
+                [(ngModel)]="evento.telefone"
+              />
               <div class="invalid-feedback">Obrigatório</div>
             </div>
             <div class="form-group col-md-6">
               <label>E-mail</label>
-              <input type="text" class="form-control" [ngClass]="cssValidator(f.email)" formControlName="email"
-                placeholder="e-mail" [(ngModel)]="evento.email">
-              <div class="invalid-feedback" *ngIf="f.email.errors?.required">Obrigatório</div>
-              <div class="invalid-feedback" *ngIf="f.email.errors?.email">E-mail inválido</div>
+              <input
+                type="text"
+                class="form-control"
+                [ngClass]="cssValidator(f.email)"
+                formControlName="email"
+                placeholder="e-mail"
+                [(ngModel)]="evento.email"
+              />
+              <div class="invalid-feedback" *ngIf="f.email.errors?.required">
+                Obrigatório
+              </div>
+              <div class="invalid-feedback" *ngIf="f.email.errors?.email">
+                E-mail inválido
+              </div>
             </div>
           </div>
         </div>
         <div class="card-footer">
           <div class="d-flex">
-            <button class="btn btn-outline-secondary me-auto border" (click)="resetForm()">
+            <button
+              class="btn btn-outline-secondary me-auto border"
+              (click)="resetForm()"
+            >
               Cancelar Alteração
             </button>
-            <button class="btn btn-success" [disabled]="!eventoForm.valid" (click)="salvarEvento()">
+            <button
+              class="btn btn-success"
+              [disabled]="!eventoForm.valid"
+              (click)="salvarEvento()"
+            >
               <!-- <span class="spinner-border spinner-border-sm me-1"></span> -->
               Salvar Evento
             </button>
@@ -66,9 +128,7 @@
     <div class="card rounded shadow-sm mt-3" *ngIf="modoEditar">
       <div class="p-3">
         <div class="d-flex border-bottom">
-          <h2 class="me-auto">
-            Lotes do Evento
-          </h2>
+          <h2 class="me-auto">Lotes do Evento</h2>
           <h2>
             <i class="fas fa-money-bill-wave"></i>
           </h2>
@@ -78,14 +138,19 @@
           <div [formGroup]="eventoForm" class="col">
             <!-- <p>Form value: {{ eventoForm.get('lotes')?.value | json }}</p>
             <p>Form Status: {{ eventoForm.get('lotes')?.status | json }}</p> -->
-            <div formArrayName="lotes" *ngFor="let lote of lotes.controls; let i=index">
+            <div
+              formArrayName="lotes"
+              *ngFor="let lote of lotes.controls; let i = index"
+            >
               <fieldset [formGroupName]="i" class="form-group">
                 <legend class="d-flex justify-content-between capitalize">
-                  {{
-                  retornaTituloLote(lotes.get(i+'.nome')?.value)
-                  }}
-                  <button (click)="removerLote(template, i)" class="p-2 btn btn-sm btn-outline-warning my-1 d-flex"
-                    tooltip="Excluir Lote" placement="left">
+                  {{ retornaTituloLote(lotes.get(i + ".nome")?.value) }}
+                  <button
+                    (click)="removerLote(template, i)"
+                    class="p-2 btn btn-sm btn-outline-warning my-1 d-flex"
+                    tooltip="Excluir Lote"
+                    placement="left"
+                  >
                     <i class="fa fa-window-close my-1"></i>
                     <b class="ml-1 d-none d-sm-block">Excluir</b>
                   </button>
@@ -93,39 +158,75 @@
                 <div class="row">
                   <div class="form-group col-md-4">
                     <label>Nome</label>
-                    <input [ngClass]="cssValidator(lotes.get(i + '.nome'))" type="text" class="form-control"
-                      formControlName="nome" placeholder="Lote">
+                    <input
+                      [ngClass]="cssValidator(lotes.get(i + '.nome'))"
+                      type="text"
+                      class="form-control"
+                      formControlName="nome"
+                      placeholder="Lote"
+                    />
                     <div class="invalid-feedback">Obrigatório</div>
                   </div>
                   <div class="form-group col-md-4">
                     <label>Quantidade</label>
-                    <input [ngClass]="cssValidator(lotes.get(i + '.quantidade'))" type="text" class="form-control"
-                      formControlName="quantidade" placeholder="000">
+                    <input
+                      [ngClass]="cssValidator(lotes.get(i + '.quantidade'))"
+                      type="text"
+                      class="form-control"
+                      formControlName="quantidade"
+                      placeholder="000"
+                    />
                     <div class="invalid-feedback">Obrigatório</div>
                   </div>
                   <div class="form-group col-md-4">
                     <label>Preço</label>
-                    <input [currencyMask]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left' }"
-                      [ngClass]="cssValidator(lotes.get(i + '.preco'))" type="text" currencyMask class="form-control"
-                      formControlName="preco" placeholder="R$ 0,00">
+                    <input
+                      [currencyMask]="{
+                        prefix: 'R$ ',
+                        thousands: '.',
+                        decimal: ',',
+                        align: 'left'
+                      }"
+                      [ngClass]="cssValidator(lotes.get(i + '.preco'))"
+                      type="text"
+                      currencyMask
+                      class="form-control"
+                      formControlName="preco"
+                      placeholder="R$ 0,00"
+                    />
                     <div class="invalid-feedback">Obrigatório</div>
                   </div>
                   <div class="form-group col-md-4">
                     <label>Data Início</label>
-                    <input type="text" class="form-control" formControlName="dataInicio" placeholder="01/01/2019"
-                      bsDatepicker [bsConfig]="bsConfigLote">
+                    <input
+                      type="text"
+                      class="form-control"
+                      formControlName="dataInicio"
+                      placeholder="01/01/2019"
+                      bsDatepicker
+                      [bsConfig]="bsConfigLote"
+                    />
                   </div>
                   <div class="form-group col-md-4">
                     <label>Data Fim</label>
-                    <input type="text" class="form-control" formControlName="dataFim" placeholder="01/01/2019"
-                      bsDatepicker [bsConfig]="bsConfigLote">
+                    <input
+                      type="text"
+                      class="form-control"
+                      formControlName="dataFim"
+                      placeholder="01/01/2019"
+                      bsDatepicker
+                      [bsConfig]="bsConfigLote"
+                    />
                   </div>
                 </div>
               </fieldset>
             </div>
           </div>
         </div>
-        <button (click)="adicionarLote()" class="d-flex btn btn-outline-primary">
+        <button
+          (click)="adicionarLote()"
+          class="d-flex btn btn-outline-primary"
+        >
           <i class="fa fa-plus-circle my-1"></i>
           <b class="ml-1">Lote</b>
         </button>
@@ -135,10 +236,25 @@
           <button class="btn btn-outline-secondary me-auto border">
             Cancelar Alteração
           </button>
-          <button (click)="salvarLotes()" [disabled]="eventoForm.get('lotes')?.invalid" class="btn btn-success">
+          <button
+            (click)="salvarLotes()"
+            [disabled]="eventoForm.get('lotes')?.invalid"
+            class="btn btn-success"
+          >
             Salvar Lotes
           </button>
         </div>
+      </div>
+    </div>
+    <div class="card rounded shadow-sm mt-3" *ngIf="modoEditar">
+      <div class="p-3">
+        <div class="d-flex border-bottom">
+          <h2 class="me-auto">Redes sociais do evento</h2>
+          <h2>
+            <i class="fas fa-share-square"></i>
+          </h2>
+        </div>
+        <app-redes-sociais [eventoId]="eventoId"></app-redes-sociais>
       </div>
     </div>
   </div>
@@ -146,31 +262,45 @@
     <div [formGroup]="eventoForm" class="card-evento-view shadow-sm">
       <div class="form-row">
         <div class="form-group m-0">
-          <input type="file" #file (change)="onFileChange($event)" class="form-control is-invalid" placeholder="" style="display: none">
+          <input
+            type="file"
+            #file
+            (change)="onFileChange($event)"
+            class="form-control is-invalid"
+            placeholder=""
+            style="display: none"
+          />
         </div>
       </div>
       <div class="card profile-card-2">
         <div class="card-img-block">
-          <img class="image" [src]="imagemURL" (click)="file.click()" class="img-fluid" alt="Card image cap" tooltip="Uplaod de Nova Imagem"
-            placement="bottom" />
+          <img
+            class="image"
+            [src]="imagemURL"
+            (click)="file.click()"
+            class="img-fluid"
+            alt="Card image cap"
+            tooltip="Uplaod de Nova Imagem"
+            placement="bottom"
+          />
         </div>
         <div class="card-body pt-3">
-          <h4>{{evento.tema}}</h4>
+          <h4>{{ evento.tema }}</h4>
           <p class="card-text">
-            <b>Local:</b> {{evento.local}}
-            <br>
-            <b>Data:</b> {{evento.dataEvento | DateFormatPipe}}
+            <b>Local:</b> {{ evento.local }}
+            <br />
+            <b>Data:</b> {{ evento.dataEvento | DateFormatPipe }}
           </p>
-          <hr>
+          <hr />
           <p class="card-text">
-            <b>Contatos</b><br>
-            <small class="text-muted">Telefone: {{evento.telefone}}</small>
-            <br>
-            <small class="text-muted">e-mail: {{evento.email}}</small>
+            <b>Contatos</b><br />
+            <small class="text-muted">Telefone: {{ evento.telefone }}</small>
+            <br />
+            <small class="text-muted">e-mail: {{ evento.email }}</small>
           </p>
           <p class="card-text">
             Capacidade:
-            <small class="text-muted">{{evento.qtdPessoas}}</small>
+            <small class="text-muted">{{ evento.qtdPessoas }}</small>
           </p>
           <div class="row">
             <div class="icon-block col-md-8 iconesSociais">
@@ -184,11 +314,15 @@
     </div>
   </div>
 </div>
-<br>
+<br />
 <ng-template #template>
   <div class="modal-body text-center">
-    <p>Tem certeza que quer deletar o lote {{this.loteAtual.nome}}?</p>
-    <button type="button" class="btn btn-default" (click)="confirmDeleteLote()">Sim</button>
-    <button type="button" class="btn btn-primary" (click)="declineDeleteLote()">Não</button>
+    <p>Tem certeza que quer deletar o lote {{ this.loteAtual.nome }}?</p>
+    <button type="button" class="btn btn-default" (click)="confirmDeleteLote()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="declineDeleteLote()">
+      Não
+    </button>
   </div>
 </ng-template>
