--- a/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
+++ b/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
@@ -3,7 +3,7 @@
 	<div class="col-md-6 d-none d-md-block" style="height: 450px;">
 		<div class="text-center col-md-12 my-auto side-heder">
 			<h1>Cadastro de Usuário</h1>
-			<img src="../../../../assets/registerImage.png" class="my-4" alt="" width="400px">
+			<img src="../../../../assets/images/registerImage.png" class="my-4" alt="" width="400px">
 		</div>
 	</div>
 
@@ -58,7 +58,7 @@
 			<div class="row">
 				<div class="form-group col-12">
 					<button class="btn btn-lg btn-success btn-block px-5" [disabled]="registrationForm.invalid" type="submit">
-						Registar
+						Registrar
 					</button>
 				</div>
 			</div>
