Implementação de palestrantes do evento

--- a/Front/ProEventos-App/src/app/components/redes-sociais/redes-sociais.component.html
+++ b/Front/ProEventos-App/src/app/components/redes-sociais/redes-sociais.component.html
@@ -35,7 +35,7 @@
     </div>
     <button (click)="adicionarRedeSocial()" class="d-flex btn btn-outline-primary mt-2">
       <i class="fa fa-plus-circle my-1"></i>
-      <b class="ml-1">Rede Social</b>
+      <b class="ms-1">Rede Social</b>
     </button>
   </div>
 </div>
