--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -228,7 +228,7 @@
           class="d-flex btn btn-outline-primary"
         >
           <i class="fa fa-plus-circle my-1"></i>
-          <b class="ml-1">Lote</b>
+          <b class="ms-1">Lote</b>
         </button>
       </div>
       <div class="card-footer">
@@ -255,6 +255,47 @@
           </h2>
         </div>
         <app-redes-sociais [eventoId]="eventoId"></app-redes-sociais>
+      </div>
+    </div>
+    <div class="card rounded shadow-sm mt-3" *ngIf="modoEditar">
+      <div class="p-3">
+        <div class="d-flex border-bottom">
+          <h2 class="me-auto">Palestrantes do evento</h2>
+          <h2>
+            <i class="fas fa-user"></i>
+          </h2>
+        </div>
+        <p>Clique em Palestrante para adicionar novos Palestrantes</p>
+        <ul class="list-group my-2">
+          <li *ngFor="let palestrante of palestrantesSelecionados" class="list-group-item">
+            <div class="d-flex align-items-center">
+              <img width="80" height="80" class="rounded-circle me-3" [src]="getImagemUrl(palestrante.user.imagemUrl)"/>
+              <span class="me-auto">{{ '@' + palestrante.user.userName }}</span>
+              <button class="btn btn-sm btn-warning" (click)="removerPalestrante(palestrante.id)">remover</button>
+            </div>
+          </li>
+        </ul>
+        <button
+          (click)="adicionarPalestrante()"
+          class="d-flex btn btn-outline-primary"
+        >
+          <i class="fa fa-plus-circle my-1"></i>
+          <b class="ms-1">Palestrante</b>
+        </button>
+      </div>
+      <div class="card-footer">
+        <div class="d-flex">
+          <button class="btn btn-outline-secondary me-auto border">
+            Cancelar Alteração
+          </button>
+          <button
+            (click)="salvarPalestrantes()"
+            [disabled]="eventoForm.get('lotes')?.invalid"
+            class="btn btn-success"
+          >
+            Salvar Palestrante
+          </button>
+        </div>
       </div>
     </div>
   </div>
@@ -324,5 +365,24 @@
     <button type="button" class="btn btn-primary" (click)="declineDeleteLote()">
       Não
     </button>
+  </div>
+</ng-template>
+<ng-template #modalPalestrantes let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Selecionar Palestrantes</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="bsModalRef.hide()"></button>
+  </div>
+  <div class="modal-body">
+    <ul class="list-group">
+      <li *ngFor="let palestrante of palestrantesDiponiveis" class="list-group-item">
+        <div class="d-flex align-items-center">
+          <img width="80" height="80" class="rounded-circle me-3" [src]="getImagemUrl(palestrante.user.imagemUrl)"/>
+          <span class="me-auto">{{ '@' + palestrante.user.userName }}</span>
+          <button class="btn btn-sm btn-outline-success" (click)="selecionarPalestrante(palestrante)">
+            Selecionar
+          </button>
+        </div>
+      </li>
+    </ul>
   </div>
 </ng-template>
